--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,2 @@
 RewriteEngine On
-RewriteRule ^index\.html$ index.php?page=/
-RewriteRule ^([a-zA-Z0-9-]*\.html)$ index.php?p=$1 [L,QSA]
+RewriteRule ^([a-zA-Z0-9\-\_\/]*)$ index.php?p=$1
