--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require": {
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.3"
+        "phpunit/phpunit": "^9.3",
+        "nunomaduro/phpinsights": "^1.14"
     }
 }
