--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,5 @@
 {
-    
     "license": "proprietary",
-    
     "name": "acs/tp11_online_advisor_phppoo",
     "description": "advisor",
     "authors": [
@@ -12,13 +10,15 @@
     ],
     "autoload": {
         "psr-4": {
-            "App\\" :"src/"
+            "App\\": "src/"
         }
-    },
-    "require": {
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3",
-        "nunomaduro/phpinsights": "^1.14"
+        "nunomaduro/phpinsights": "^1.14",
+        "codeception/codeception": "^4.1",
+        "codeception/module-phpbrowser": "^1.0.0",
+        "codeception/module-asserts": "^1.0.0",
+        "codeception/module-db": "^1.0"
     }
 }
