--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
         "codeception/module-phpbrowser": "^1.0.0",
         "codeception/module-asserts": "^1.0.0",
         "codeception/module-db": "^1.0"
+    },
+    "require": {
+        "twig/twig": "^3.0"
     }
 }
