--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,4 @@
 RewriteEngine On
-RewriteRule ^([a-zA-Z0-9\-\_\/]*)$ index.php?p=$1
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([a-zA-Z0-9\-\_\/]*)$ index.php?url=$1 [QSA,L]
