--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "codeception/module-db": "^1.0"
     },
     "require": {
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "symfony/http-foundation": "^5.1"
     }
 }
